# ragQwen

./: .env  README.md  main.py  pyproject.toml  requires.txt
faiss_vectorstore/: index.faiss  index.pkl
